# pubtab

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
examples/: table10.xlsx  table11.xlsx  table2.xlsx  table3.xlsx  table4.xlsx  table5.xlsx  table6.xlsx  table7.xlsx  table8.xlsx  table9.xlsx
src/pubtab/: __init__.py  _preview.py  cli.py  config.py  models.py  preview.py  reader.py  renderer.py  tex_reader.py  utils.py  writer.py
src/pubtab/themes/: __init__.py
src/pubtab/themes/three_line/: config.yaml  template.tex
src/pubtab/themes/three_line_tabularray/: config.yaml  template.tex
tests/: create_fixture.py  test_preview_download.py  test_roundtrip.py
tests/fixtures/: table4.xlsx
